--- a/aboutUs.html
+++ b/aboutUs.html
@@ -63,8 +63,6 @@
 
 	      </nav> <!-- end #nav-wrap -->
 
-
-
 	</div>
 
    </header> <!-- end header -->
@@ -73,8 +71,10 @@
    <!-- homepage hero
    ================================================== -->
    <section id="AboutHome">
-
-
+	<div class="row hero-content">
+	<div id="home-slider">
+	</div>
+	</div>
    </section> <!-- end homepage hero -->
 
 
