--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
 						</div>
 					</td>
 					<td>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/BzNFNiVWH3M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe id="promo" width="560" height="315" src="https://www.youtube.com/embed/BzNFNiVWH3M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</td>
 				</tr>
-				<tr>
-					<!---<td>
+				<!---<tr>
+					<td>
 						<div id="android">
 							<a class="smoothscroll" title="Back to Top" href="#hero">Download Android Application</a>
 						</div>
-					</td>--->
+					</td>
 					<td>
 					</td>
-				</tr>
+				</tr>--->
 				</table>
 
 	      </div> <!-- end twelve columns-->
