--- a/aboutUs.html
+++ b/aboutUs.html
@@ -127,7 +127,7 @@ Happy Shopping.
                </div>
                <div class="member-name">
                   <h3>Dhyey Patel</h3>
-                  <span>CTO</span>
+                  <!---<span>CTO</span>--->
                </div>
 
                <p>Machine Learning Enthusiast, Android & AR</p>
@@ -152,7 +152,7 @@ Happy Shopping.
                </div>
                <div class="member-name">
                   <h3>Parth Bhalodiya</h3>
-                  <span>COO</span>
+                  <!---<span>COO</span>--->
                </div>
 
                <p>Machine Learning Enthusiast & Operational Skills</p>
@@ -176,7 +176,7 @@ Happy Shopping.
                </div>
                <div class="member-name">
                   <h3>Kishan Vaishnani</h3>
-                  <span>CEO</span>
+                  <!---<span>CEO</span>--->
                </div>
 
                <p>Machine Learning Enthusiast & Marketing Skills </p>
