--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
       	<div class="twelve columns content group">
 
 				<ul class="social-links">
-               <!--<li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+               <li><a href="https://www.facebook.com/DecorOwl-126307555836643"><i class="fa fa-facebook-square"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
                <li><a href="https://www.youtube.com/channel/UCSXjT-nGLqF7fmxkvOS3pDQ"><i class="fa fa-youtube-play"></i></a></li>
                <!--<li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
