--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<td>
 						<div id="homeheader"> <h1><span>Decorowl</span>. Best Decore Item in Best Rate from your Best Area.
 						</h1>
-						<h3>Try All Decor Item by sitting at Home of your Local Vendors by just using your AR supported Device</h3>
+						<h3>Try All Decor Item by just sitting at Home of your<br><u>Local Vendors</u> from your AR supported Device</h3>
 						</div>
 					</td>
 					<td>
@@ -127,7 +127,7 @@
            <div class="card">
              <div class="icon">
                <img class="shape" src="images/services-shape.svg" alt="shape">
-               <img class="shape-1" src="images/services-shape-2.svg" alt="shape">
+               <img class="shape-1" src="images/owl.png" alt="shape">
              </div>
              <div class="card-content">
                <div class="card-title">Owl's Vision</div>
@@ -142,7 +142,7 @@
            <div class="card">
              <div class="icon">
                <img class="shape" src="images/services-shape.svg" alt="shape">
-               <img class="shape-1" src="images/services-shape-3.svg" alt="shape">
+               <img class="shape-1" src="images/smart-reco.png" alt="shape">
              </div>
              <div class="card-content">
                <div class="card-title">Smart Recommendation</div>
@@ -156,11 +156,11 @@
            <div class="card">
              <div class="icon">
                <img class="shape" src="images/services-shape.svg" alt="shape">
-               <img class="shape-1" src="images/services-shape-1.svg" alt="shape">
+               <img class="shape-1" src="images/location.png" alt="shape">
              </div>
              <div class="card-content">
                <div class="card-title"> Location Based Catalogue</div>
-               <p class="card-text">DecorOwl fills the product catalogue based upon Geo-Location of the user. ~ It also provide option to increase area of service to see more
+               <p class="card-text">DecorOwl fills the product catalogue based upon Geo-Location of the user.It also provide option to increase area of service to see more
  avilable options.</p>
              </div>
            </div>
