--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 	                 	<textarea name="entry.839337160"  id="entry.839337160" placeholder="message" rows="10" cols="50" required ></textarea>
 	               </div>
                   <div>
-                     <button name="submit_btn" class="submitform">Submit</button>
+                     <button name="submit_btn" class="submitform" onclick="SubmitScript();">Submit</button>
                      <div id="submit-loader">
                         <div class="text-loader">Sending...We are happy to see you soon.</div>
        				      <div class="s-loader">
@@ -311,7 +311,6 @@
       		<div id="message-success">
                <i class="icon-ok"></i>Your message was sent, thank you!<br />
       		</div>
-
          </div>
 
          <div class="six columns tab-whole right">
@@ -385,7 +384,7 @@
    <script src="js/jquery.placeholder.min.js"></script>
    <script src="js/jquery.magnific-popup.min.js"></script>
    <script src="js/main.js"></script>
-   <script src="js/scrollUp.js"></script>
+   <script src="js/scrollUp_Contact.js"></script>
 
 </body>
 
