--- a/aboutUs.html
+++ b/aboutUs.html
@@ -134,12 +134,12 @@ Happy Shopping.
 
                <ul class="member-social">
                   
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="https://twitter.com/pateldhyey98"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/dhyey-patel-72b65a156/"><i class="fa fa-linkedin"></i></a></li>
 				  <!--<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 				  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-skype"></i></a></li>-->
-				  <li><a href="#"><i class="fa fa-github"></i></a></li>
+				  <li><a href="https://github.com/Griffin98"><i class="fa fa-github"></i></a></li>
                </ul>
 
             </div> <!-- end member -->
