--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 	     				   <input name="entry.94217820" type="text" id="entry.94217820" placeholder="Subject"  value="" />
 	               </div>
                   <div>
-	                 	<textarea name="entry.839337160"  id="entry.839337160" placeholder="message" rows="10" cols="50" required ></textarea>
+	                 	<textarea name="entry.839337160"  id="entry.839337160" placeholder="message" rows="5" cols="40"></textarea>
 	               </div>
                   <div>
                      <button name="submit_btn" class="submitform" onclick="SubmitScript();">Submit</button>
