--- a/aboutUs.html
+++ b/aboutUs.html
@@ -210,6 +210,7 @@ Happy Shopping.
 
 				<ul class="social-links">
                <li><a href="https://www.facebook.com/DecorOwl-126307555836643"><i class="fa fa-facebook-square"></i></a></li>
+			   <li><a href="https://www.instagram.com/decorowl_"><i class="fa fa-instagram"></i></a></li>
                <!--<li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
                <li><a href="https://www.youtube.com/channel/UCSXjT-nGLqF7fmxkvOS3pDQ"><i class="fa fa-youtube-play"></i></a></li>
