--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						</div>
 					</td>
 					<td>
-						<iframe id="promo" width="560" height="315" src="https://www.youtube.com/embed/BzNFNiVWH3M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe id="promo" width="560" height="315" src="https://www.youtube-nocookie.com/embed/fKdqJCrkczY?controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope;" allowfullscreen></iframe>
 					</td>
 				</tr>
 				<!---<tr>
@@ -142,8 +142,7 @@
 
            <div class="card">
              <div class="icon">
-               <img class="shape" src="images/services-shape.svg" alt="shape">
-               <img class="shape-1" src="images/smart-reco.png" alt="shape">
+               <img class="shape" src="images/smart-reco.png" alt="shape">
              </div>
              <div class="card-content">
                <div class="card-title">Smart Recommendation</div>
@@ -358,20 +357,19 @@
 		</div>
 		<!--- Slider 3 End--->
 		
-     <!--- 
+    <!---
     </div>
     <!-- Add Pagination -->
 	<!---
     <div class="swiper-pagination"></div>
     <!-- Add Arrows -->
 	<!---
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
 	</div>
-	
+	<div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
 	</section>
 	
-	--->
+	
 	
 	<!---- End of Testimonial reviews--->
 	   
