--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
 
            <div class="card">
              <div class="icon">
-               <img class="shape" src="images/services-shape.svg" alt="shape">
-               <img class="shape-1" src="images/owl.png" alt="shape">
+               <img class="shape" src="images/owl.png" alt="shape">
              </div>
              <div class="card-content">
                <div class="card-title">Owl's Vision</div>
@@ -155,8 +154,7 @@
 
            <div class="card">
              <div class="icon">
-               <img class="shape" src="images/services-shape.svg" alt="shape">
-               <img class="shape-1" src="images/location.png" alt="shape">
+               <img class="shape" src="images/location.png" alt="shape">
              </div>
              <div class="card-content">
                <div class="card-title"> Location Based Catalogue</div>
