--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 			   <table>
 			   <tr>
 					<td>
-						<div id="homeheader"> <h1><span>Decorowl</span>. Best Decore Item in Best Rate from your Best Area.
+						<div id="homeheader"> <h1><span>Decorowl</span>. Best Decore Item<br> in Best Rate from your Best Area.
 						</h1>
 						<h3>Try All Decor Item by just sitting at Home of your<br><u>Local Vendors</u> from your AR supported Device</h3>
 						</div>
 					</td>
 					<td>
-						<iframe id="promo" width="560" height="315" src="https://www.youtube-nocookie.com/embed/fKdqJCrkczY?controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope;" allowfullscreen></iframe>
+						<!---<iframe id="promo" width="560" height="315" src="https://www.youtube-nocookie.com/embed/fKdqJCrkczY?controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope;" allowfullscreen></iframe>--->
 					</td>
 				</tr>
 				<!---<tr>
@@ -216,8 +216,10 @@
 			   <div class="flex-caption">
 					<h1 class="">#MakeInIndia</h1>
 
-					<h3 class="">We support Indigenisation and #MakeInIndia movement. We envision MSME's to thrive through our platfrom in 21st cnetury competitive environment.</h3>		   
+					<h3 class="">We support Indigenisation and #MakeInIndia movement. We envision MSME's to thrive through our platfrom in 21st cnetury competitive environment.</h3>	
+					<img src="images/makeinindia.png">
 				</div>
+				
 			</li>	
 
 			
@@ -227,7 +229,8 @@
 				<div class="flex-caption">
 					<h1 class="">Increase customer outreach</h1>
 
-					<h3 class="">Home Decor MSMSE's will be able to increase their customer outreach thereby increasing ther revenue through DecorOwl platform.</h3>			   
+					<h3 class="">Home Decor MSMSE's will be able to increase their customer outreach thereby increasing ther revenue through DecorOwl platform.</h3>	
+					<img src="images/Graph.png">	
 				</div>					
 			</li>
 
@@ -237,8 +240,9 @@
 					<h1 class="">Create Online Platform for MSME
 					</h1>	
 									
-					<h3 class="">Our Vision is to provide online platform for Home Decor MSME's to sell their products.</h3>				   
-				</div>						
+					<h3 class="">Our Vision is to provide online platform for Home Decor MSME's to sell their products.</h3>	
+					<img src="images/MSME.png">					
+				</div>			
 			</li>
 
 			</ul>
@@ -432,7 +436,6 @@
    <script src="js/jquery.magnific-popup.min.js"></script>
    <script src="js/main.js"></script>
    <script src="js/scrollUp_Contact.js"></script>
-   
    <script src="js/swiper.min.js"></script>
 	<script>
 	var swiper = new Swiper('.swiper-container', {
