--- a/aboutUs.html
+++ b/aboutUs.html
@@ -223,8 +223,8 @@ Happy Shopping.
 
             <div class="info">
 
-            	<div class="footer-logo"> </div>
-				<div class="mii-logo"></div>
+            	<div class="mii-logo"><img src="images/Logo&Name.png"></div>
+            	<div class="mii-logo"><img src="images/mii.png"></div>
 
 	            <p>
 	            </p>
