--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 			
 			
 			<!------ Video In SLider and Video ------------>
-			<iframe id="video-YT" width="560" height="315" src="https://www.youtube.com/embed/fKdqJCrkczY?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe id="video-YT" width="560" height="315" src="https://www.youtube.com/embed/fKdqJCrkczY?ref=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<!--- slidse--->
 			<!---
