--- a/aboutUs.html
+++ b/aboutUs.html
@@ -60,9 +60,7 @@
 	           <li><a href="./index.html#testy"><span class="about-nav">Contact Us</span></a></li>
 			   <li><a class="smoothscroll" href="#"><span class="about-nav">About Us</span></a></li>
 	         </ul> <!-- end #nav -->
-
 	      </nav> <!-- end #nav-wrap -->
-
 	</div>
 
    </header> <!-- end header -->
@@ -71,25 +69,21 @@
    <!-- homepage hero
    ================================================== -->
    <section id="AboutHome">
-	<div class="row hero-content">
-	<div id="home-slider">
-	</div>
-	</div>
-   </section> <!-- end homepage hero -->
-
+		<img id="home_img" src="images/Wave-About.png">
+   </section>
+   <!-- end homepage hero -->
 
 <!--- Latter about Us-->
-
    <section id="Latter">
 	<h1> What we do </h1>
 	<h3>
 	Buying home decor products from local vendors through online platform has been restrictive due to certain barriers and, this industry has not been benifitted from the digitization of commerical commodity (e-commerce). DecorOwl aims to break those barrier through the use of 21st century promising technology - Agumented Reality (AR) and Artificial Intelligence (AI).
 	<br>
 	<br>
-DecorOwl is an E-Marketplace which connects local home decor vendors to a single platform. DecorOwl provides smart AI solution to vendors to increase their customer outreach, and AR-AI based solution to customer to smartly select product of their need.
+	DecorOwl is an E-Marketplace which connects local home decor vendors to a single platform. DecorOwl provides smart AI solution to vendors to increase their customer outreach, and AR-AI based solution to customer to smartly select product of their need.
 	<br>
 	<br>
-Happy Shopping.
+	Happy Shopping.
 
 	</h3>
 
@@ -272,7 +266,7 @@ Happy Shopping.
    <script src="js/jquery.placeholder.min.js"></script>
    <script src="js/jquery.magnific-popup.min.js"></script>
    <script src="js/main.js"></script>
-   <script src="js/scrollUp.js"></script>
+   <script src="js/scrollUp_Contact.js"></script>
 
 </body>
 
