--- a/aboutUs.html
+++ b/aboutUs.html
@@ -20,14 +20,18 @@
    <link rel="stylesheet" href="css/base.css">
    <link rel="stylesheet" href="css/vendor.min.css">
    <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="css/swiper.min.css">
+   <link rel="stylesheet" href="css/video.min.css">
 
    <!-- script
    ================================================== -->
 	<script src="js/modernizr.js"></script>
+	<script src="js/Testimonial.js"></script>
 
    <!-- favicons
 	================================================== -->
 	<link rel="shortcut icon" href="favicon.png" >
+
 
 </head>
 
@@ -53,14 +57,18 @@
          	</a>
 
 	         <ul id="nav" class="nav">
-	            <li><a href="./index.html"><span class="about-nav">Home</span></a></li>
-		        <li><a href="./index.html#features"><span class="about-nav">Features</span></a></li>
-	           <!--<li><a class="smoothscroll" href="#how-works">How it Works</a></li>-->
-	            <li><a href="./index.html#hero"><span class="about-nav">Our Vision</span></a></li>
-	           <li><a href="./index.html#testy"><span class="about-nav">Contact Us</span></a></li>
-			   <li><a class="smoothscroll" href="#"><span class="about-nav">About Us</span></a></li>
+	            <li><a class="" href="index.html#home">Home</a></li>
+		        <li><a class="" href="index.html#features">Features</a></li>
+	           <!--<li><a class="" href="#how-works">How it Works</a></li>-->
+	            <li><a class="" href="index.html#hero">Our Vision</a></li>
+	           <li><a class="" href="index.html#testy">Contact Us</a></li>
+			   <li><a class="" href="aboutUs.html">About Us</a></li>
 	         </ul> <!-- end #nav -->
+
 	      </nav> <!-- end #nav-wrap -->
+
+
+
 	</div>
 
    </header> <!-- end header -->
@@ -68,9 +76,9 @@
 
    <!-- homepage hero
    ================================================== -->
-   <section id="AboutHome">
-		<img id="home_img" src="images/Wave-About.png">
-   </section>
+   <section id="home">
+		<img src="images/Wave-About.png">
+   </section> 
    <!-- end homepage hero -->
 
 <!--- Latter about Us-->
