--- a/aboutUs.html
+++ b/aboutUs.html
@@ -216,7 +216,7 @@
 
    <!-- Footer
    ================================================== -->
-   <footer>
+ <footer position="relative">
 
       <div class="row">
 
@@ -224,11 +224,10 @@
 
 				<ul class="social-links">
                <li><a href="https://www.facebook.com/DecorOwl-126307555836643"><i class="fa fa-facebook-square"></i></a></li>
-			   <li><a href="https://www.instagram.com/decorowl_"><i class="fa fa-instagram"></i></a></li>
-               <!--<li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
+               <li><a href="https://www.instagram.com/decorowl_"><i class="fa fa-instagram"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>-->
                <li><a href="https://www.youtube.com/channel/UCSXjT-nGLqF7fmxkvOS3pDQ"><i class="fa fa-youtube-play"></i></a></li>
-               <!--<li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
                <li><a href="#"><i class="fa fa-flickr"></i></a></li>
                <li><a href="#"><i class="fa fa-skype"></i></a></li>-->
             </ul>
@@ -239,8 +238,9 @@
 
             	<div class="mii-logo"><img src="images/Logo&Name.png"></div>
             	<div class="mii-logo"><img src="images/mii.png"></div>
-
-	            <p>
+	            
+				<p>
+				
 	            </p>
 
 	         </div>
@@ -260,8 +260,8 @@
    <div id="preloader">
     	<div id="loader"></div>
    </div>
-
-    <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
+   
+   <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
 
    <!-- Java Script
    ================================================== -->
