--- a/aboutUs.html
+++ b/aboutUs.html
@@ -62,7 +62,7 @@
 	           <!--<li><a class="" href="#how-works">How it Works</a></li>-->
 	            <li><a class="" href="index.html#hero">Our Vision</a></li>
 	           <li><a class="" href="index.html#testy">Contact Us</a></li>
-			   <li><a class="" href="aboutUs.html">About Us</a></li>
+			   <li><a class="smoothscroll" href="#home">About Us</a></li>
 	         </ul> <!-- end #nav -->
 
 	      </nav> <!-- end #nav-wrap -->
