--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
           }
 
           function startTimer() {
-              setInterval(displayNextImage, 1500);
+              setInterval(displayNextImage, 1700);
           }
 
           var images = [], x = -1;
@@ -486,9 +486,9 @@
 		  images[1] = "images/Home/Home2.jpg";
 		  images[2] = "images/Home/Home2_1.jpg";
           images[3] = "images/Home/Home3.jpg";
-          images[4] = "images/Home/Home4.jpg";
-		  images[5] = "images/Home/Home5.jpg";
-		  images[6] = "images/Home/Home1.jpg";
+          //images[4] = "images/Home/Home4.jpg";
+		  images[4] = "images/Home/Home5.jpg";
+		  images[5] = "images/Home/Home1.jpg";
       </script>
 
 
