--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
 	         <ul id="nav" class="nav">
 	            <li><a class="smoothscroll" href="#home">Home</a></li>
 		        <li><a class="smoothscroll" href="#features">Features</a></li>
-	           <!--<li><a class="smoothscroll" href="#how-works">How it Works</a></li>-->
-	            <li><a class="smoothscroll" href="#hero">Our Vision</a></li>
+	            <li><a class="smoothscroll" href="#how-works">How it Works</a></li>
+	            <li><a class="smoothscroll" href="#hero">Our Mission</a></li>            
 	           <li><a class="smoothscroll" href="#testy">Contact Us</a></li>
-			   <li><a class="" href="aboutUs.html">About Us</a></li>
 	         </ul> <!-- end #nav -->
 
 	      </nav> <!-- end #nav-wrap -->
@@ -151,30 +150,42 @@
 
    <!-- Services Section
    ================================================== -->
-  <!-- 
+   
    <section id="how-works">
-     <div class="container">
-       <div class="card-row">
          <div class="card-container-2">
            <div class="section-title">
              <h1>How It Works</h1>
              <div class="line"/>
            </div>
-         </div>
-       </div>
      </div>
+	 
+	 <img src="images/HowWorks.jpg">
+	 
    </section> <!-- end services --> 
 
  <!-- Our Vision
    ================================================== -->
+   
 	<section id="hero">	
 	<div class="card-container-2">
 		<div class="section-title">
-			<h1>Our Vision</h1>
+			<h1>Our Mission</h1>
 			<div class="line"/>
 		</div>
 	</div>
-				
+	<div class="row section-head">
+		<div class="twelve columns">
+	         <p>Covid 19 Pandemic has presented numerous challenges to Small, Medium and Micro Home Decor Enterprises,
+moreover it has showcased "Digitalization" as a key to future. DecorOwl aims to digitalize home decor
+MSMEs through a single online platform. DecorOwl aims to break common hurdles faced in digitalization of
+home decor industry by using Augmented Reality and Artificial Intelligence technology. MSMEs can save
+their personal digitalization cost by connecting through DecorOwl platform.DecorOwl mission is to help
+MSMEs to increase their customer outreach and increase their business pan india, thereby increasing their
+revenue by various folds.</p>
+
+	      </div>
+
+    </div> 		
 	<div class="row hero-content">
 
 	    <div class="twelve columns hero-container">
@@ -228,7 +239,11 @@
 	</div> <!-- end row -->	 	
 
    </section> <!-- end homepage hero -->
+	
+	
+		
 
+ 
    <!-- contact form
    ================================================== -->
 	<section id="testy">
@@ -273,9 +288,11 @@
          </div>
 
          <div class="six columns tab-whole right">
-            <p class="lead">For more infromation you can contact us on </p> <h3>info@decorowl.co</h3> <h3>+91-776999 8842</h3> 
-			<p class="lead">or you can fill the form given aside <br> 
-			stay tunned for more latest updates!!</p>
+			<h3> <h3>Contact Us:</h3>
+			   <p>info@decorowl.co <br>
+			   +91-776999 8842</p> 
+			<p class="lead">You can fill the form given aside <br> 
+			and stay tunned for more latest updates!!</p>
 			
 			
 			<!------ Video In SLider and Video ------------>
