--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
            </div>
      </div>
 	 
-	 <img src="images/HowWorks.jpg">
+	 <img src="images/HowWorks.jpg"/>
 	 
    </section> <!-- end services --> 
 
@@ -416,11 +416,11 @@ revenue by various folds.</p>
 
       	</div>
 
-         <ul class="copyright">
-         	<li>&copy; Copyright 2020 Decorowl.</li>
+        <ul class="copyright">
+         <!---	<li>&copy; Copyright 2020 Decorowl.</li>--->
          	<li>Design by <a href="http://www.decorowl.co/">Decorowl.</a>.</li>
          </ul>
-
+		
 
       </div> <!-- end row -->
 
